--- a/sections/template--product--recommendations.liquid
+++ b/sections/template--product--recommendations.liquid
@@ -61,12 +61,8 @@
                 {%- endfor -%}
             </div>
         </div>
-        <div class="swiper-button--prev">
-          {% render 'theme-icon', icon: 'chevron_left', iconClasses: 'chevron-left', widthUnset: true, iconAttributes: 'style="max-height:18px;"' %}
-        </div>
-        <div class="swiper-button--next">
-          {% render 'theme-icon', icon: 'chevron_right', iconClasses: 'chevron-right', widthUnset: true, iconAttributes: 'style="max-height:18px;"' %}
-        </div>
+        <div class="swiper-button--prev"></div>
+        <div class="swiper-button--next"></div>
       </div>
     </div>
   {%- endif -%}
