--- a/snippets/collapsible-tab.liquid
+++ b/snippets/collapsible-tab.liquid
@@ -7,8 +7,8 @@
                     {% render 'theme-icon' with icon: 'plus', iconClasses: 'plus-icon flex-full' %}
                     {% render 'theme-icon' with icon: 'minus', iconClasses: 'minus-icon flex-full' %}
                 {% elsif open_close_icon == "caret" %}
-                    {% render 'theme-icon', icon: 'chevron_up', iconClasses: 'chevron-up flex-full' %}
-                    {% render 'theme-icon', icon: 'chevron_down', iconClasses: 'chevron-down flex-full' %}
+                    {% render 'theme-icon', icon: 'chevron_up_sp', iconClasses: 'chevron-up flex-full' %}
+                    {% render 'theme-icon', icon: 'chevron_down_sp', iconClasses: 'chevron-down flex-full' %}
                 {% endif %}
             </span>
         </summary>
