--- a/snippets/social-share.liquid
+++ b/snippets/social-share.liquid
@@ -25,7 +25,7 @@
 
 <div id="sharing" class="social-sharing" data-permalink="{{ permalinkURL }}">
 
-  <div class="h5">{{ settings.social_sharing_title }}</div>
+  {% comment %} <div class="h5">{{ settings.social_sharing_title }}</div> {% endcomment %}
 
   {% if settings.share_facebook %}
   <a href="//www.facebook.com/sharer.php?u={{ permalinkURL }}" target="_blank" rel="noopener" aria-label="Share on Facebook">
