--- a/snippets/theme-icon.liquid
+++ b/snippets/theme-icon.liquid
@@ -73,13 +73,13 @@
   {% when 'chevron_up' %}
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" {% unless widthUnset %}width="{{ iconWidth }}" height="{{ iconHeight }}"{% endunless %} fill="{{ iconColor }}" {% if iconClasses %}class="{{ iconClasses }}"{% endif %} {% if iconAttributes %}{{ iconAttributes }}{% endif %}><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path style="transform:translateX(22px);" d="M206 114.7l22.6 22.6 160 160L411.3 320 366 365.3l-22.6-22.6L206 205.3 68.6 342.6 46 365.3 .7 320l22.6-22.6 160-160L206 114.7z"/></svg>
   {% when 'chevron_up_sp' %}
-    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg" {% if iconClasses %}class="{{ iconClasses }}"{% endif %}>
       <path d="M1 6L6 1L11 6" stroke="#E098B4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>      
   {% when 'chevron_down' %}
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" {% unless widthUnset %}width="{{ iconWidth }}" height="{{ iconHeight }}"{% endunless %} fill="{{ iconColor }}" {% if iconClasses %}class="{{ iconClasses }}"{% endif %} {% if iconAttributes %}{{ iconAttributes }}{% endif %}><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M206 365.3l22.6-22.6 160-160L411.3 160 366 114.7l-22.6 22.6L206 274.7 68.6 137.4 46 114.7 .7 160l22.6 22.6 160 160L206 365.3z"/></svg>
   {% when 'chevron_down_sp' %}
-    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg" {% if iconClasses %}class="{{ iconClasses }}"{% endif %}>
       <path d="M1 1L6 6L11 1" stroke="#E098B4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
     {% when 'chevron_left' %}
