--- a/sections/template--product--recently-viewed.liquid
+++ b/sections/template--product--recently-viewed.liquid
@@ -32,12 +32,8 @@
       <div class="swiper-container">
         <div class="swiper-wrapper" id="recently-viewed-products"></div>
       </div>
-      <div class="swiper-button--prev">
-        {% render 'theme-icon', icon: 'chevron_left', iconClasses: 'chevron-left', widthUnset: true, iconAttributes: 'style="max-height:18px;"' %}
-      </div>
-      <div class="swiper-button--next">
-        {% render 'theme-icon', icon: 'chevron_right', iconClasses: 'chevron-right', widthUnset: true, iconAttributes: 'style="max-height:18px;"' %}
-      </div>
+      <div class="swiper-button--prev"></div>
+      <div class="swiper-button--next"></div>
     </div>
   </div>
 </div>
