--- a/sections/template--search.liquid
+++ b/sections/template--search.liquid
@@ -1185,7 +1185,7 @@
         <div class="sitewide--title-wrapper">
           {% if search.performed %}
             {% if search.results_count == 0 %}
-              <h1 class="page--title">{{ 'general.search.no_results_html' | t: terms: search.terms }}</h1>
+              <h1 class="page--title no_results">{{ 'general.search.no_results_html' | t: terms: search.terms }}</h1>
             {% else %}
               <h1 class="page--title">{{ 'general.search.results_for_html' | t: terms: search.terms }}</h1>
             {% endif %}
