--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -29,7 +29,7 @@
           <p>
             <input type="submit" value="{{ 'customer.register.submit' | t }}" class="btn btn--full">
           </p>
-          <a href="{{ shop.url }}">{{ 'customer.register.cancel' | t }}</a>
+          <a href="{{ shop.url }}" class="btn--secondary">{{ 'customer.register.cancel' | t }}</a>
 
         {% endform %}
       </div>
