--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1231,7 +1231,7 @@ img.logo_overlay.js,
 .drawer--right #CartContainer .ajaxcart__qty{
     max-width: 130px;
 }
-.drawer--right #CartContainer input{
+.drawer--right #CartContainer .ajaxcart__qty input{
     padding: 10px 25px;
     border-bottom: none;
     border: 1px solid #ccc;
@@ -1635,4 +1635,7 @@ a#RecoverPassword:hover{
     background: #333;
     border: 1px solid #333;
     line-height: 1;
+}
+#ngc_haisou_header{
+    color: #333;
 }
