--- a/sections/blog--blog-posts.liquid
+++ b/sections/blog--blog-posts.liquid
@@ -377,7 +377,7 @@
         </div>
       </div>
       <div class="homepage-information-section-wrapper__btn">
-        <a href="https://obaneya-shop.com/pages/contac">お問い合わせはこちら</a>
+        <a href="https://obaneya-shop.com/pages/contact">お問い合わせはこちら</a>
       </div>
     </div>
   
