--- a/sections/collection--ranking-collection.liquid
+++ b/sections/collection--ranking-collection.liquid
@@ -3,7 +3,7 @@
 {{ '//unpkg.com/swiper/swiper-bundle.min.js' | script_tag }}
 
 <div
-  class="homepage-sections-wrapper homepage-sections-wrapper--{{ section.settings.colors }}"
+  class="custom_ranking homepage-sections-wrapper homepage-sections-wrapper--{{ section.settings.colors }}"
   data-wetheme-section-type="collection--featured-collection" data-wetheme-section-id="{{ section.id }}"
 >
 
